[tool.poetry]
name = "banking_widget"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"
pytest = "^8.4.1"
pandas = "^2.3.1"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
python-dotenv = "^1.1.1"
pandas-stubs = "^2.3.0.250703"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"


[tool.black]
exclude = '''
(
  /(
      \.git
  )/
)
'''

[tool.isort]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


